# zipperposition

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .header  .merlin  .ocamlformat  .ocamlinit  .ocp-indent  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  META  Makefile  Makefile.in  README  README.adoc  README.md  README.mkd  TODO.md  _oasis  _tags  bench_run.py  benchmark.ini  benchs.ini  builtin.theory  builtin_lemma.theory  casc2018.txt  clauseQueue.ml  clauseQueue.mli  clauses.ml  clauses.mli  configure  configure.ac  dbg.orig  dbg.orig2  decls  diff  diffs  (+89 more)
src/: .merlin  AC.ml  AC.mli  DBEnv.ml  DBEnv.mli  FO.ml  FOFormula.ml  FOFormula.mli  FOTerm.ml  FOTerm.mli  FOUnif.ml  FOUnif.mli  HO.ml  HO.mli  HOTerm.ml  HOTerm.mli  HOUnif.ml  HOUnif.mli  META  NPDtree.ml  NPDtree.mli  _tags  arith.ml  arith.mli  arithElim.ml  arithElim.mli  arithLit.ml  arithLit.mli  arithTerm.ml  arithTerm.mli  ast_theory.ml  ast_tptp.ml  ast_tptp.mli  bBox.ml  bBox.mli  bBox_intf.ml  basic.ml  basic.mli  bij.ml  bij.mli  (+296 more)
src/arbitrary/: .merlin  arArith.ml  arArith.mli  arForm.ml  arForm.mli  arID.ml  arID.mli  arInterval.ml  arInterval.mli  arLiteral.ml  arLiteral.mli  arMonome.ml  arMonome.mli  arPattern.ml  arPattern.mli  arSignature.ml  arSignature.mli  arSymbol.ml  arSymbol.mli  arTerm.ml  arTerm.mli  arType.ml  arType.mli  arbitraryUntyped.ml  arbitraryUntyped.mli  dune  jbuild  libzipperposition_arbitrary.mllib  libzipperposition_arbitrary.mlpack  logtk_arbitrary.mld  logtk_arbitrary.mllib  logtk_arbitrary.mlpack
src/base/: DBEnv.ml  DBEnv.mli  FOTerm.ml  FOTerm.mli  HORewriting.ml  HORewriting.mli  HOTerm.ml  HOTerm.mli  META  NPDtree.ml  basicTerm.ml  basicTerm.mli  cnf.ml  cnf.mli  comparison.ml  comparison.mli  congruence.ml  congruence.mli  dtree.ml  dtree.mli  fastFingerprint.ml  fastFingerprint.mli  featureVector.ml  featureVector.mli  fingerprint.ml  fingerprint.mli  formula.ml  formula.mli  formulaShape.ml  formulaShape.mli  index.ml  index.mli  interfaces.ml  lambda.ml  lambda.mli  liblogtk_stubs.clib  logtk.mlpack  logtkCache.ml  logtkCnf.ml  logtkCnf.mli  (+104 more)
src/calculi/: arithInt.ml  arithInt.mli  avatar.ml  avatar.mli  chaining.ml  chaining.mli  enumTypes.ml  enumTypes.mli  heuristics.ml  heuristics.mli  induction.ml  induction.mli  induction_lemmas.ml  induction_lemmas.mli  induction_simple.ml  induction_simple.mli  setChaining.ml  setChaining.mli  superposition.ml  superposition.mli
src/containers/: gen.ml  gen.mli  hashset.ml  hashset.mli  heap.ml  heap.mli  lazyGraph.ml  lazyGraph.mli  leftistheap.ml  leftistheap.mli  pHashtbl.ml  pHashtbl.mli  persistentGraph.ml  persistentGraph.mli  persistentHashtbl.ml  persistentHashtbl.mli  sequence.ml  sequence.mli  smallSet.ml  smallSet.mli  unionFind.ml  unionFind.mli  vector.ml  vector.mli
src/core/: AllocCache.ml  AllocCache.mli  Binder.ml  Binder.mli  Builtin.ml  Builtin.mli  Cache.ml  Cache.mli  Classify_literals.ml  Classify_literals.mli  Cnf.ml  Cnf.mli  Comparison.ml  Comparison.mli  Compute_prec.ml  Compute_prec.mli  Congruence.ml  Congruence.mli  Congruence_intf.ml  DBEnv.ml  DBEnv.mli  Defined_pos.ml  Dtree.ml  Dtree.mli  FOTerm.ml  FOTerm.mli  FV_tree.ml  FV_tree.mli  FastFingerprint.ml  FeatureVector.ml  FeatureVector.mli  Fingerprint.ml  Fingerprint.mli  FixpointUnif.ml  FixpointUnif.mli  Flex_state.ml  Flex_state.mli  Formula.ml  Formula.mli  FormulaShape.ml  (+226 more)
src/depqbf/: zipperposition_depqbf.ml
src/extended/: HORewriting.ml  HORewriting.mli  congruence.ml  dtree.ml  evaluator.ml  evaluator.mli  fastFingerprint.ml  fastFingerprint.mli  index.ml  lambda.mli  logtk_extended.mllib  logtk_extended.mlpack  rewriting.ml  rewriting.mli  skolem.ml  skolem.mli  transform.mli  typeErasure.ml
src/hornet/: Bool_lit.ml  Bool_lit.mli  Bool_lit_intf.ml  Classify_cst.ml  Classify_cst.mli  Clause.ml  Clause.mli  ClauseContext.ml  ClauseContext.mli  Constraint.ml  Constraint.mli  Dismatching_constr.ml  Dismatching_constr.mli  Event.ml  Event.mli  H_trail.mli  Horn_clause.ml  Horn_clause.mli  Horn_superposition.ml  Horn_superposition.mli  Hornet.ml  Hornet_types.mli  Hornet_types_util.ml  Ind_cst.mli  Label.ml  Label.mli  Labelled_clause.ml  Labelled_clause.mli  Lit.ml  Lit.mli  Proof.ml  Proof.mli  Proof_print.ml  Proof_print.mli  Proof_res.ml  Proof_res.mli  Splitting.ml  Splitting.mli  State.ml  State.mli  (+4 more)
src/lib/: CCArray.ml  CCArray.mli  CCList.ml  CCList.mli  CCOpt.ml  CCSequence.ml  CCSequence.mli  choice.ml  choice.mli  lazyGraph.ml  lazyGraph.mli  leftistheap.ml  leftistheap.mli  mixtbl.ml  mixtbl.mli  qCheck.ml  qCheck.mli  signal.ml  signal.mli  simplex.ml  simplex.mli  vector.ml  vector.mli
src/main/: dune  jbuild  setup_trace.dummy.ml  setup_trace.tef.ml  setup_trace.tracy.ml  zipperposition.ml
src/meta/: KB.ml  ast_theory.ml  encoding.ml  encoding.mli  kB.ml  lex_theory.mll  libzipperposition_meta.mldylib  libzipperposition_meta.mllib  logtk_meta.mllib  logtk_meta.mlpack  map.ml  metaKB.ml  metaKB.mli  metaPattern.ml  metaPattern.mli  metaProver.ml  metaProver.mli  metaProverState.ml  metaProverState.mli  metaReasoner.ml  metaReasoner.mli  multiMap.ml  multiMap.mli  pMap.ml  parseUtils.ml  parse_theory.mly  pattern.ml  plugin.ml  plugin.mli  prover.ml  prover.mli  reasoner.ml  reasoner.mli
src/msat/: zipperposition_msat.ml
src/parsers/: Ast_dk.ml  Lex_tptp.mll  Lex_zf.mll  Parse_dk.mly  Parse_tptp.mly  Parse_zf.mly  Tip_ast.ml  Tip_lexer.mll  Tip_parser.mly  Util_dk.ml  Util_dk.mli  ast_ho.ml  ast_ho.mli  ast_tptp.ml  ast_tptp.mli  (+27 more)
tests/: .merlin  _tags  benchpress.sexp  conf.toml  dune  helpers.ml  jbuild  mk_peano.py  poly.zf  poly_bad.zf  run.ml  run_bench.ml  run_tests.ml  run_tests.sh  testArith.ml  testBij.ml  testCNF.ml  testClauses.ml  testCongruence.ml  testEUnif.ml  testEgraph.ml  testFormula.ml  testIndex.ml  testInterval.ml  testMeta.ml  testMonome.ml  testMultiset.ml  testOrdering.ml  testOrderings.ml  testOrdinal.ml  testPartialOrder.ml  testRewriting.ml  testStream.ml  testSubsts.ml  testTerm.ml  testTerms.ml  testType.ml  testUnif.ml  test_theory_detect.p  tests.ml  (+2 more)
(+17836 files in other folders)
