opam-version: "2.0"
maintainer: "simon.cruanes.2007@m4x.org"
authors: ["Simon Cruanes" "Petar Vukmirovic" "Alexander Bentkamp" "Sophie Tourret" "Visa Nummelin"]
homepage: "https://github.com/sneeuwballen/zipperposition"
version: "2.0"
synopsis: "Library for Zipperposition"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "base-bytes"
  "base-unix"
  "zarith"
  "logtk" { = version }
  "containers" { >= "3.0" & < "4.0" }
  "iter" { >= "1.2" }
  "oseq"
  "dune" { >= "1.11" }
  "msat" { >= "0.8.1" < "0.9" }
  "menhir" {build}
  "logtk" { = version }
  "ocaml" {>= "4.07"}
]
tags: [ "logic" "unification" "term" "superposition" "prover" ]
bug-reports: "https://github.com/sneeuwballen/zipperposition/issues"
dev-repo: "git+https://github.com/sneeuwballen/zipperposition.git"

