opam-version: "2.0"
maintainer: "simon.cruanes.2.17@m4x.org"
authors: ["Simon Cruanes" "Petar Vukmirovic" "Alexander Bentkamp" "Sophie Tourret" "Visa Nummelin"]
homepage: "https://github.com/sneeuwballen/zipperposition"
license: "BSD-2-Clause"
version: "2.1"
synopsis: "Library for Zipperposition"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "base-bytes"
  "base-unix"
  "logtk" { = version }
  "containers" { >= "3.1" & < "4.0" }
  "containers-data" { >= "3.1" & < "4.0" }
  "iter" { >= "1.2" }
  "oseq"
  "dune" { >= "1.11" }
  "msat" { >= "0.8.1" < "0.10" }
  "menhir" {build}
  "logtk" { = version }
  "ocaml" {>= "4.07"}
]
tags: [ "logic" "unification" "term" "superposition" "prover" ]
bug-reports: "https://github.com/sneeuwballen/zipperposition/issues"
dev-repo: "git+https://github.com/sneeuwballen/zipperposition.git"

