opam-version: "2.0"
maintainer: "simon.cruanes.2007@m4x.org"
author: "Simon Cruanes"
homepage: "https://github.com/c-cube/zipperposition"
version: "1.5"
synopsis: "Core types and algorithms for logic"
build: [
  ["jbuilder" "build" "-p" name]
  ["jbuilder" "build" "@doc" "-p" name] {with-doc}
  ["jbuilder" "runtest" "-p" name] {with-test}
]
depends: [
  "ocamlfind" { build }
  "base-bytes"
  "base-unix"
  "zarith"
  "containers" { >= "1.0" }
  "iter" { >= "1.2" }
  "jbuilder" { build }
  "alcotest" {with-test}
  "qcheck" {with-test & >= "0.9"}
  "ocaml" {>= "4.03"}
]
depopts: [
  "msat" { >= "0.5" < "1.0" }
  "menhir" {build}
]
tags: [ "logic" "unification" "term" ]
bug-reports: "https://github.com/c-cube/zipperposition/issues"
dev-repo: "git+https://github.com/c-cube/zipperposition.git"

