opam-version: "2.0"
maintainer: "simon.cruanes.2007@m4x.org"
author: "Simon Cruanes"
homepage: "https://github.com/sneeuwballen/zipperposition"
version: "1.5"
synopsis: "Core types and algorithms for logic"
build: [
  ["dune" "build" "-p" name]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "base-bytes"
  "base-unix"
  "zarith"
  "containers" { >= "1.0" }
  "iter" { >= "1.2" }
  "menhir" {build}
  "dune" { build }
  "alcotest" {with-test}
  "qcheck-core" {with-test & >= "0.9"}
  "ocaml" {>= "4.03"}
]
depopts: [
  "msat" { >= "0.8" < "0.9" }
]
tags: [ "logic" "unification" "term" ]
bug-reports: "https://github.com/sneeuwballen/zipperposition/issues"
dev-repo: "git+https://github.com/sneeuwballen/zipperposition.git"

