opam-version: "2.0"
maintainer: "simon.cruanes.2007@m4x.org"
author: "Simon Cruanes"
homepage: "https://github.com/sneeuwballen/zipperposition"
version: "1.5.1"
synopsis: "Core types and algorithms for logic"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "base-bytes"
  "base-unix"
  "zarith"
  "containers" { >= "1.0" }
  "iter" { >= "1.2" }
  "menhir" {build}
  "dune" { >= "1.1" }
  "alcotest" {with-test}
  "qcheck-core" {with-test & >= "0.9"}
  "qcheck-alcotest" {with-test & >= "0.9"}
  "ocaml" {>= "4.03"}
]
depopts: [
  "msat"
]
conflicts: [
  "msat" { < "0.8" }
  "msat" { >= "0.9" }
]
tags: [ "logic" "unification" "term" ]
bug-reports: "https://github.com/sneeuwballen/zipperposition/issues"
dev-repo: "git+https://github.com/sneeuwballen/zipperposition.git"

