opam-version: "2.0"
maintainer: "simon.cruanes.2007@m4x.org"
author: "Simon Cruanes"
homepage: "https://github.com/c-cube/zipperposition"
version: "1.5"
synopsis: "Support tools for Zipperposition"
build: [
  ["dune" "build" "-p" name]
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  "dune" { build }
  "containers" { >= "1.0" }
  "iter" { >= "1.2" }
  "msat" { >= "0.8" < "0.9" }
  "zarith"
  "logtk" { >= "1.5" }
  "libzipperposition" { >= "1.5" }
  "ocaml" {>= "4.03"}
]
bug-reports: "https://github.com/c-cube/zipperposition/issues"
dev-repo: "git+https://github.com/c-cube/zipperposition.git"
