opam-version: "2.0"
maintainer: "simon.cruanes.2.17@m4x.org"
authors: ["Simon Cruanes" "Petar Vukmirovic" "Alexander Bentkamp" "Sophie Tourret" "Visa Nummelin"]
homepage: "https://github.com/sneeuwballen/zipperposition"
license: "BSD-2-Clause"
version: "2.1"
synopsis: "Support tools for Zipperposition"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" { >= "1.11" }
  "containers" { >= "3.0" & < "4.0" }
  "iter" { >= "1.2" }
  "oseq" { >= "0.2" }
  "msat" { >= "0.8" < "0.10" }
  "logtk" { = version }
  "libzipperposition" { = version }
  "ocaml" {>= "4.07"}
]
bug-reports: "https://github.com/sneeuwballen/zipperposition/issues"
dev-repo: "git+https://github.com/sneeuwballen/zipperposition.git"
