opam-version: "2.0"
maintainer: "simon.cruanes.2007@m4x.org"
authors: ["Simon Cruanes" "Petar Vukmirovic" "Alexander Bentkamp" "Sophie Tourret" "Visa Nummelin"]
homepage: "https://github.com/sneeuwballen/zipperposition"
version: "1.6"
synopsis: "A fully automatic theorem prover for typed higher-order and beyond"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "base-unix"
  "zarith"
  "logtk" { = version }
  "libzipperposition" { = version }
  "containers" { >= "1.0" }
  "iter" { >= "1.2" }
  "oseq"
  "dune" { >= "1.1" }
  "msat" { >= "0.8" < "0.9" }
  "menhir" {build}
  "ocaml" {>= "4.03"}
]
tags: [ "logic" "unification" "term" "superposition" "prover" ]
bug-reports: "https://github.com/sneeuwballen/zipperposition/issues"
dev-repo: "git+https://github.com/sneeuwballen/zipperposition.git"

