(env
  (_
    (flags :standard -w -a)
    (ocamlopt_flags :standard -O3 -unbox-closures -unbox-closures-factor 20)))

(rule
 (alias runtest)
 (package zipperposition)
 (locks   /tlock)
 (enabled_if (= %{ocaml-config:os_type} Unix))
 (deps    main/zipperposition.exe test_must_pass.sh (source_tree ../examples/))
 (action  (run ./test_must_pass.sh ./main/zipperposition.exe)))

;(documentation
;  (package logtk))
