
(executable
  (name run_tests)
  (libraries logtk logtk.parsers logtk.arbitrary logtk.arith
             iter qcheck-core qcheck-alcotest alcotest)
  (flags :standard -warn-error -3 -w -3-50 -color always -open Logtk_arith))

(alias
 (name    runtest)
 (package logtk)
 (locks   /tlock)
 (deps    run_tests.exe)
 (action  (run %{deps})))

