; main lib

(library
 (name logtk)
 (public_name logtk)
 (synopsis "core data structures and algorithms for Logtk")
 (libraries
  containers
  containers-data
  iter
  oseq
  unix
  mtime
  mtime.clock.os
  atomic
  logtk.common
  logtk.arith)
 (flags :standard -w -32-50 -open Logtk_arith -open Logtk_common)
 (foreign_stubs
  (language c)
  (names util_stubs)
  (flags :standard -Wextra -Wno-unused-parameter)))

(documentation
 (package logtk))
