; main binary

(executable
 (name zipperposition)
 (package zipperposition)
 (public_name zipperposition)
 (promote
  (until-clean)
  (into ../..))
 (modes native)
 (libraries
  logtk
  libzipperposition.phases
  (select
   setup_trace.ml
   from
   (tracy-client tracy-client.trace -> setup_trace.tracy.ml)
   (trace-tef -> setup_trace.tef.ml)
   (-> setup_trace.dummy.ml))))
