
(library
  (name logtk_parsers)
  (public_name logtk.parsers)
  (synopsis "parsers for logtk")
  (optional)
  (libraries containers logtk logtk.arith)
  (flags :standard -warn-error -32 -open Logtk_arith)
  (ocamlopt_flags :standard -Oclassic)
)

(menhir
  ;(flags (--infer))
  (modules Parse_tptp Parse_zf Parse_dk Tip_parser))

(ocamllex
  (modules Lex_tptp Lex_zf Lex_dk Tip_lexer))

;(ocamllex (Lex_tptp))
;(ocamllex (Lex_zf))
;(ocamllex (Lex_dk))
;(ocamllex (Tip_lexer))
