
(rule
  (targets const.ml)
  (action
    (with-stdout-to %{targets}
      (progn
        (echo "let version = \"${version:libzipperposition}\"\n")
        (echo "let section = Logtk.Util.Section.make \"zip\"\n"))))
  )

(library
  (name libzipperposition)
  (public_name libzipperposition)
  (synopsis "library for the Zipperposition theorem prover")
  (libraries containers zarith msat logtk logtk.proofs logtk.parsers)
  (flags :standard -w +a-4-42-44-48-50-58-32-60@8 -color always)
  (ocamlopt_flags :standard -O3
                  -unbox-closures -unbox-closures-factor 20)
  )


