(library
 (name libzipperposition_induction)
 (public_name libzipperposition.induction)
 (synopsis "Induction calculus for the Zipperposition theorem prover")
 (libraries
  libzipperposition
  libzipperposition.avatar
  logtk.arith
  logtk.common)
 (flags :standard -w -32 -open Logtk_arith -open Logtk_common))
